removed scrolling issue, now cannot get rid of address bar on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,9 +17,9 @@ a {
 }
 
 #__next {
-  /* height: 100%; */
-  height: 100vh;
+  height: 100%;
+  /* height: 100vh; */
   width: 100%;
-  background: darkgrey;
+  background: lime;
   min-height: -webkit-fill-available;
 }
